docs/dqx/versioned_docs/version-0.15.0/reference/api/rule.md
---
sidebar_label: rule
title: databricks.labs.dqx.rule
---

## Criticality Objects

```python
class Criticality(Enum)
```

Enum class to represent criticality of the check.

## SingleColumnMixin Objects

```python
class SingleColumnMixin()
```

Mixin to handle column-related functionalities.

## MultipleColumnsMixin Objects

```python
class MultipleColumnsMixin()
```

Mixin to handle columns-related functionalities.

## DQRule Objects

```python
@dataclass(frozen=True)
class DQRule(abc.ABC, DQRuleTypeMixin, SingleColumnMixin,
             MultipleColumnsMixin)
```

Represents a data quality rule that applies a quality check function to column(s) or
column expression(s). This class includes the following attributes:
* *check_func* - The function used to perform the quality check.
* *name* (optional) - A custom name for the check; autogenerated if not provided.
* *criticality* (optional) - Defines the severity level of the check:
    - *error*: Critical issues.
    - *warn*: Potential issues.
* *column* (optional) - A single column to which the check function is applied.
* *columns* (optional) - A list of columns to which the check function is applied.
* *filter* (optional) - A filter expression to apply the check only to rows meeting specific conditions.
* *check_func_args* (optional) - Positional arguments for the check function (excluding *column*).
* *check_func_kwargs* (optional) - Keyword arguments for the check function (excluding *column*).
* *user_metadata* (optional) - User-defined key-value pairs added to metadata generated by the check.
* *message_expr* (optional) - User-defined expression used as the check failure message. Accepts either
    a Spark SQL expression string or a Spark *Column* expression. The expression is evaluated as-is.
    Any column references, casts, or rule-identifying literals must be supplied directly by the caller
    (e.g., ``F.concat(F.lit(&#x27;age_positive: value &#x27;), F.col(&#x27;age&#x27;).cast(&#x27;string&#x27;))`` or
    ``&quot;concat(&#x27;age_positive: value &#x27;, cast(age as string))&quot;``). The same message is shared across all
    rules generated from a ``DQForEachColRule``.

#### columns

some checks require list of columns instead of column

#### get\_check\_condition

```python
@abc.abstractmethod
def get_check_condition() -> Column
```

Compute the check condition for the rule.

**Returns**:

  The Spark Column representing the check condition.

#### columns\_as\_string\_expr

```python
@ft.cached_property
def columns_as_string_expr() -> Column
```

Spark Column expression representing the column(s) as a string (not normalized).

**Returns**:

  A Spark Column object representing the column(s) as a string (not normalized).

#### prepare\_check\_func\_args\_and\_kwargs

```python
def prepare_check_func_args_and_kwargs() -> tuple[list, dict]
```

Prepares positional arguments and keyword arguments for the check function.
Includes only arguments supported by the check function and skips empty values.

#### rule\_fingerprint

```python
@ft.cached_property
def rule_fingerprint() -> str
```

Compute a deterministic SHA-256 hash of a single rule definition.

**Returns**:

  A hex-encoded SHA-256 hash string.

#### to\_dict

```python
def to_dict() -> dict
```

Converts a DQRule instance into a structured dictionary.

## DQRowRule Objects

```python
@dataclass(frozen=True)
class DQRowRule(DQRule)
```

Represents a row-level data quality rule that applies a quality check function to a column or column expression.
Works with check functions that take a single column or no column as input.

#### get\_check\_condition

```python
def get_check_condition() -> Column
```

Compute the check condition for this rule.

**Returns**:

  The Spark Column representing the check condition.

## DQDatasetRule Objects

```python
@dataclass(frozen=True)
class DQDatasetRule(DQRule)
```

Represents a dataset-level data quality rule that applies a quality check function to a column or
column expression or list of columns depending on the check function.
Either column or columns can be provided but not both. The rules are applied to the entire dataset or group of rows
rather than individual rows. Failed checks are appended to the result columns in the same way as row-level rules.

#### get\_check\_condition

```python
def get_check_condition() -> Column
```

Compute the check condition for this rule.

**Returns**:

  The Spark Column representing the check condition.

#### check

```python
@ft.cached_property
def check() -> tuple[Column, Callable, str | None]
```

Return (condition, apply_func, and optionally info_column_name).

## DQForEachColRule Objects

```python
@dataclass(frozen=True)
class DQForEachColRule(DQRuleTypeMixin)
```

Represents a data quality rule that applies to a quality check function
repeatedly on each specified column of the provided list of columns.
This class includes the following attributes:
* *columns* - A list of column names or expressions to which the check function should be applied.
* *check_func* - The function used to perform the quality check.
* *name* (optional) - A custom name for the check; autogenerated if not provided.
* *criticality* - The severity level of the check:
    - *warn* for potential issues.
    - *error* for critical issues.
* *filter* (optional) - A filter expression to apply the check only to rows meeting specific conditions.
* *check_func_args* (optional) - Positional arguments for the check function (excluding column names).
* *check_func_kwargs* (optional) - Keyword arguments for the check function (excluding column names).
* *user_metadata* (optional) - User-defined key-value pairs added to metadata generated by the check.

#### get\_rules

```python
def get_rules() -> list[DQRule]
```

Build a list of rules for a set of columns.

**Returns**:

  list of dq rules

#### compute\_rule\_fingerprint

```python
def compute_rule_fingerprint(check_dict: dict) -> str
```

Compute a deterministic SHA-256 hash of a single rule definition.

Normalizes the check dict before hashing so the same logical rule yields the same
fingerprint regardless of storage backend or code path (Delta, Lakebase, engine).
Normalization turns variants into a single canonical form.
After normalization, all equivalent rules hash to the same fingerprint.

**Arguments**:

- `check_dict` - Dictionary representing a single check rule.
  

**Returns**:

  A hex-encoded SHA-256 hash string.

